<resources>
    <string name="app_name">OrganizeMe</string>

    <string name="email_input">Введите свою почту</string>
    <string name="account_exist"><u>У меня уже есть аккаунт</u></string>
    <string name="first_hello">Привет! OrganizeMe - это социальная сеть, которая поможет тебе эффективно
      планировать свои дела. Для того, чтобы продолжить, тебе необходимо зарегистрироваться</string>

    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="sign_in">ВОЙТИ</string>
    <string name="sign_up">Зарегистрироваться</string>

    <string name="error_title"><u>Ошибка</u></string>
    <string name="email_is_not_registered">Такая почта не зарегистрирована. Повторите попытку еще раз</string>
    <string name="password_is_not_correct">Неверный пароль. Повторите попытку еще раз</string>
    <string name="email_or_password_is_not_correct">Почта или пароль неверны</string>

    <string name="forgot_password_email">Ваш пароль от аккаунта: </string>
    <string name="send_password">Отправить пароль</string>
    <string name="email_is_not_written">Введите, пожалуйста, почту</string>
    <string name="password_is_not_written">Введите, пожалуйста, пароль</string>
    <string name="email_is_exist">Такая почта уже зарегистрирована</string>

    <string name="nickname">Никнейм</string>
    <string name="create_nickname">Придумайте, пожалуйста, никнейм</string>
    <string name="nickname_is_exist">Такой никнейм уже существует</string>
    <string name="nickname_is_not_correct">Введен некорректный никнейм</string>
    <string name="input_email_please">Введите, пожалуйста, почту</string>
    <string name="write_your_email">Введите вашу почту</string>
    <string name="input_nickname_please">Введите, пожалуйста, никнейм</string>
    <string name="marathons">Марафоны</string>
    <string name="home">Лента</string>
    <string name="settings">settings</string>
    <string name="subscribers">подписчики</string>
    <string name="subscriptions">подписки</string>
    <string name="doneText">выполнено</string>
    <string name="efficiencyText">эффективность</string>
    <string name="create_password">Придумайте, пожалуйста, пароль</string>
    <string name="input_password_please">Введите, пожалуйста, пароль</string>
    <string name="email_is_not_exist">Почта не зарегистрирована</string>
    <string name="try_again">Попробовать еще раз</string>

</resources>
