<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_layout_margin"
        android:fontFamily="@font/source_sans_pro_bold"
        android:text="@string/write_your_email"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/email_input"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_layout_margin"
        android:fontFamily="@font/source_sans_pro_light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/grey_light" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_layout_margin"
        android:text="@string/send_password"
        style="@style/BlueButtonStyle" />

</LinearLayout>