<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/large_layout_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in_page"
        app:layout_constraintLeft_toLeftOf="@id/sign_in_page"
        app:layout_constraintRight_toRightOf="@id/sign_in_page"
        app:layout_constraintTop_toTopOf="@id/sign_in_page">

        <ImageView
            android:id="@+id/app_name_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/email_input"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_layout_margin"
            android:fontFamily="@font/source_sans_pro_light"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/small_text_color" />

        <EditText
            android:id="@+id/password_input"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro_light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/small_text_color" />

        <TextView
            android:id="@+id/forgot_password"
            style="@android:style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:fontFamily="@font/source_sans_pro_light"
            android:text="@string/forgot_password"
            android:textColor="@color/blue_text_color"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/sign_in"
            style="@android:style/TextAppearance.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_layout_margin"
            android:layout_marginBottom="@dimen/large_layout_margin"
            android:fontFamily="@font/source_sans_pro_bold"
            android:text="@string/sign_in"
            android:textColor="@color/white_text_color" />

        <TextView
            style="@android:style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_layout_margin"
            android:fontFamily="@font/source_sans_pro_light"
            android:text="@string/sign_up"
            android:textColor="@color/blue_text_color" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>