<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin">

    <LinearLayout
        android:layout_width="@dimen/registration_page_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/registration"
        app:layout_constraintLeft_toLeftOf="@id/registration"
        app:layout_constraintRight_toRightOf="@id/registration"
        app:layout_constraintTop_toTopOf="@id/registration">

        <ImageView
            android:id="@+id/app_name_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/first_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_hello"
            android:textColor="@color/ordinary_text_color"
            android:textSize="@dimen/ordinary_text_size" />

        <EditText
            android:id="@+id/email_input"
            android:textColorHint="@color/small_text_color"
            android:textSize="@dimen/ordinary_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_input" />

        <TextView
            android:id="@+id/account_exist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_exist"
            android:textColor="@color/small_text_color"
            android:textSize="@dimen/small_text_size" />

    </LinearLayout>

    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/blue_text_color"
        android:textSize="@dimen/ordinary_text_size"
        app:layout_constraintBottom_toBottomOf="@id/registration"
        app:layout_constraintRight_toRightOf="@id/registration" />

</androidx.constraintlayout.widget.ConstraintLayout>