<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/large_layout_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/registration"
        app:layout_constraintLeft_toLeftOf="@id/registration"
        app:layout_constraintRight_toRightOf="@id/registration"
        app:layout_constraintTop_toTopOf="@+id/registration">

        <ImageView
            android:id="@+id/registrationImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal">

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/email"
                android:textColor="@color/grey_light" />

            <TextView
                android:id="@+id/checkEmail"
                style="@android:style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="@font/montserrat"
                android:text=""
                android:textColor="@color/grey_light" />

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/nickname"
                android:textColor="@color/grey_light" />

            <TextView
                android:id="@+id/checkNickname"
                style="@android:style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="@font/montserrat"
                android:text=""
                android:textColor="@color/grey_light" />

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/password"
                android:textColor="@color/grey_light" />

            <TextView
                android:id="@+id/checkPassword"
                style="@android:style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="@font/montserrat"
                android:text=""
                android:textColor="@color/grey_light" />


        </GridLayout>

        <Button
            android:id="@+id/signUpButton"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_layout_margin"
            android:layout_marginBottom="@dimen/large_layout_margin"
            android:text="@string/sign_up" />

    </LinearLayout>

    <ImageView
        android:id="@+id/prevButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_left"
        app:layout_constraintBottom_toBottomOf="@id/registration"
        app:layout_constraintLeft_toLeftOf="@id/registration" />

</androidx.constraintlayout.widget.ConstraintLayout>