<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/small_layout_margin"
        android:layout_marginTop="@dimen/small_layout_margin"
        android:layout_marginRight="@dimen/small_layout_margin"
        android:layout_marginBottom="@dimen/small_layout_margin"
        app:cardCornerRadius="10dp"
        app:cardElevation="@dimen/elevation">

        <LinearLayout
            android:layout_margin="@dimen/pre_medium_layout_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/large_layout_margin"
                android:layout_marginTop="@dimen/small_layout_margin"
                android:layout_marginRight="@dimen/large_layout_margin"
                android:fontFamily="@font/montserrat"
                android:text="@string/write_your_email"
                android:textColor="@color/grey_light" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputDialogLayout"
                style="@style/EditTextOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_layout_margin"
                android:layout_marginTop="@dimen/small_layout_margin"
                android:layout_marginRight="@dimen/small_layout_margin"
                android:textColorHint="@color/grey_light"
                app:hintTextColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInputDialog"
                    style="@style/EditTextOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sendPassword"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_layout_margin"
                android:text="@string/send_password" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>