<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registration_email_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/large_layout_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/registration_email_fragment"
        app:layout_constraintLeft_toLeftOf="@id/registration_email_fragment"
        app:layout_constraintRight_toRightOf="@id/registration_email_fragment"
        app:layout_constraintTop_toTopOf="@id/registration_email_fragment">

        <ImageView
            android:id="@+id/registration_email_fragment_app_name_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_layout_margin"
            android:fontFamily="@font/montserrat"
            android:text="@string/first_hello"
            android:textColor="@color/grey_dark" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_email_fragment_email_input_layout"
            style="@style/EditTextOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_layout_margin"
            android:textColorHint="@color/grey_light"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/error"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:hintTextColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_email_fragment_email_input"
                style="@style/EditTextOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/registration_email_account_exist"
            style="@android:style/TextAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_layout_margin"
            android:fontFamily="@font/montserrat"
            android:text="@string/account_exist"
            android:textColor="@color/grey_light" />

    </LinearLayout>

    <ImageView
        android:id="@+id/registration_email_fragment_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_right"
        app:layout_constraintBottom_toBottomOf="@id/registration_email_fragment"
        app:layout_constraintRight_toRightOf="@id/registration_email_fragment" />

</androidx.constraintlayout.widget.ConstraintLayout>